# CWD

./: .gitignore  README.md  endian.hpp  hello_world.cpp  testEndian.cpp  testTryCatch.cpp  testVector.cpp  testWindow.cpp  test_bit_shift.cpp  test_data_type.cpp  test_endian_by_union.cpp  test_ext_buffer_to_array.cpp  test_file_io.cpp  test_fwd_bwd_iterator.cpp  test_new_allocate.cpp  test_struct.cpp  test_tif.cpp  tif.hpp
testInput/: CMakeLists.txt  main.cpp
testTiff/: 3stack_small.tif  CMakeLists.txt  endian.hpp  test_tif.cpp  tif.hpp
